fixed align center items in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,16 @@ footer a {
     padding: 0;
     font-size: 14px;
   }
+
+  .mobiletext {
+    text-align: center !important;
+    padding-right: 2% !important;
+  }
+
+  .mobilepad {
+    padding-left: 2% !important;
+    margin-left: 13% !important;
+  }
 }
 
 @media screen and (max-width: 450px) {
